# antitheft-cli

./: Cargo.toml  README.md
.git-history/: FETCH_HEAD  config  index  packed-refs
.git-history/logs/: HEAD
.git-history/logs/refs/remotes/origin/: HEAD  main
.git-history/objects/pack/: pack-c6dacf238efe29536e8d48c9048257992f0b67ee.idx  pack-c6dacf238efe29536e8d48c9048257992f0b67ee.pack  pack-c6dacf238efe29536e8d48c9048257992f0b67ee.rev
.git-history/refs/original/refs/heads/: main
.git-history/refs/remotes/origin/: main
src/: lib.rs  main.rs
