[package]
name = "antitheft-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "antitheft_cli"
path = "src/lib.rs"

[[bin]]
name = "antitheft-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
libc = "0.2"
